Teleportation Fix and jdk 8